--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
      <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet:300,400,700' rel='stylesheet' type='text/css'>
         <link href="style.css" type="text/css" rel="stylesheet">
           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"
     <head>
     <title> Website </title>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
