--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <style>
 .parallax {
   /* The image used */
-  background-image: url("");
+  background-image: url("t%C3%A9l%C3%A9charger.jfif");
   
   /* Set a specific height */
   min-height: autopx;
@@ -93,7 +93,7 @@
  <style>
 .parallax {
   /* The image used */
-  background-image: url("");
+  background-image: url("t%C3%A9l%C3%A9charger.jfif");
   
   /* Set a specific height */
   min-height: 500px;
