--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="col-sm-6 text center">
                 <img src=""><br> Anthony Gast Portfolio</h1>
                 <br>
-               <img src="">
+               <img src="8c0247527b_50165683_big-data.jpg">
                </div>
            
             </h1>
